rasberry api modify
